--- a/templates/blog/showByName.html.twig
+++ b/templates/blog/showByName.html.twig
@@ -7,7 +7,7 @@
     <h1>All articles from article s table : </h1>
     {% for article in articles %}
         <div>
-            <h2>{{ loop.index }} / {{ article.title }} - Category : {{ article.category.name }}</h2>
+            <h2>{{ article.id }} / {{ article.title }} - Category : {{ article.category.name }}</h2>
             <p>{{ article.content }}</p>
         </div>
     {% else %}
