--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -4,6 +4,14 @@
 {% block title %}All articles{% endblock %}
 
 {% block body %}
+
+
+{{ form_start(form) }}
+    {{ form_row(form.searchField) }}
+    <button type="submit" name="btnSearch">Rechercher</button>
+{{ form_end(form) }}
+
+
     <h1>All articles from article s table : </h1>
     {% for article in articles %}
         <div>
@@ -16,4 +24,5 @@
     <a href="{{ path('app_index') }}">
       Back to homepage.
     </a>
+
 {% endblock %}
