--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -24,7 +24,9 @@
 
     <a href="{{ path('article_index') }}">back to list</a>
 
-    <a href="{{ path('article_edit', {'id': article.id}) }}">edit</a>
+{% if is_granted('ROLE_AUTHOR') %}
+    <a href="{{ path('article_edit', { 'id': article.id} ) }}">Éditer</a>
+{%endif%}
 
     {{ include('article/_delete_form.html.twig') }}
 {% endblock %}
